benchmark/original-output/swp-carried-dep1.mir-output
llc: error: llc: <stdin>:1:1: error: expected top-level entity
# RUN: llc -mtriple=hexagon -run-pass pipeliner -debug-only=pipeliner %s -o /dev/null 2>&1 -pipeliner-experimental-cg=true | FileCheck %s
^
